---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "rules": {
      "nursery": {
        "noDuplicateJsonKeys": "error"
      }
    }
  }
}
```

## `test.json`

```json
{ "foo": true, "foo": true }
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks
  


```

# Emitted Messages

```block
test.json:1:3 lint/nursery/noDuplicateJsonKeys ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The key foo was already declared.
  
  > 1 │ { "foo": true, "foo": true }
      │   ^^^^^
  
  i This where a duplicated key was declared again.
  
  > 1 │ { "foo": true, "foo": true }
      │                ^^^^^
  
  i If a key is defined multiple times, only the last definition takes effect. Previous definitions are ignored.
  

```

```block
test.json lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Fixes applied to the file, but there are still diagnostics to address.
  

```

```block
Checked 1 file(s) in <TIME>
```


